feat: add folder organisation of projects
